<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="title_playables">My Games</string>
    <string name="title_search">Search</string>
    <string name="search_search_hint">Search for games…</string>
    <string name="detail_button_open_website">Open Website</string>
    <string name="game_add">Add</string>
    <string name="game_remove">Remove</string>
    <string name="game_played">Played</string>
    <string name="game_not_played">Not Played</string>
    <string name="playables_empty">No Games added yet</string>
    <string name="error_loading_text">An error has occurred while loading your data</string>
    <string name="error_loading_reload_button">Reload</string>
    <string name="main_not_connected">Internet not connected</string>
    <string name="app_info_title">Playables App Info</string>
    <string name="app_info_privacy_policy_button_text">Privacy Policy</string>
    <string name="app_info_programmed_by_button_text">Programmed by Florian Schuster</string>
    <string name="app_info_rawg_button_text">This product uses the RAWG.io API</string>
    <string name="app_info_analytics_title">Analytics</string>
</resources>
