<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/infoLogoImageView"
        android:layout_width="72dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/margin"
        android:src="@drawable/ic_logo"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/infoTitleTextView"
        style="@style/Playables.Text.Headline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin"
        android:text="@string/app_info_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/infoLogoImageView" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/analyticsCheckbox"
        style="@style/Playables.Text.Body"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin"
        android:background="@drawable/bg_info_item"
        android:drawableStart="@drawable/ic_show_chart"
        android:drawablePadding="@dimen/padding_half"
        android:drawableTint="@color/white"
        android:padding="@dimen/padding"
        android:text="@string/app_info_analytics_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/infoTitleTextView"
        app:layout_constraintWidth_percent="0.75"
        app:switchPadding="@dimen/margin"
        app:thumbTint="@drawable/selector_switch_thumb"
        app:trackTint="@drawable/selector_switch_track" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/infoPrivacyPolicyButton"
        style="@style/Playables.View.Button.Outlined"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin"
        android:text="@string/app_info_privacy_policy_button_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/analyticsCheckbox"
        app:layout_constraintWidth_percent="0.75" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/infoProgrammedByButton"
        style="@style/Playables.View.Button.Outlined"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/app_info_programmed_by_button_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/infoPrivacyPolicyButton"
        app:layout_constraintWidth_percent="0.75" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/infoRawgButton"
        style="@style/Playables.View.Button.Outlined"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin"
        android:text="@string/app_info_rawg_button_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/infoProgrammedByButton"
        app:layout_constraintWidth_percent="0.75" />
</androidx.constraintlayout.widget.ConstraintLayout>